# nox

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  action.yml  appveyor-26-32.txt  appveyor-34-32.txt  appveyor-34-64.txt  appveyor-36-64.txt  appveyor.yml  danny-27-64-conda.txt  danny-35-64.txt  danny-36-64.txt  nox-test.py  nox.py  noxfile.py  pyproject.toml  requirements-conda-test.txt  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  todo  win_env.py  winreg_hack.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  action_helper.py  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: action.yml  cd.yml  ci.yml
appveyor/: build_py_launcher.cmd  install.ps1  install_python354.ps1  install_python363.ps1  launcher.c
docs/: Makefile  common_patterns.md  conf.py  config.rst  contrib.rst  cookbook.rst  index.rst  tutorial.rst  usage.rst  witchhazel.py
docs/_static/: custom.css
environment/: create_env_files.py  py3.10-conda-test-conda-lock.yml  py3.10-conda-test.yaml  py3.11-conda-test-conda-lock.yml  py3.11-conda-test.yaml  py3.7-conda-test.yaml  py3.8-conda-test.yaml  py3.9-conda-test-conda-lock.yml  py3.9-conda-test.yaml
nox/: __init__.py  __main__.py  _cli.py  _completers.py  _decorators.py  _merge.py  _option_set.py  _options.py  _parallel.py  _parametrize.py  _requests.py  _resolver.py  _testing.py  _toml.py  _typing.py  _version.py  command.py  environments.py  logger.py  main.py  manifest.py  popen.py  project.py  py.typed  registry.py  session.py  sessions.py  tasks.py  toml.py  tox_to_nox.jinja2  tox_to_nox.py  utils.py  virtualenv.py  workflow.py
tests/: conftest.py  test__cli.py  test__option_set.py  test__parametrize.py  test__resolver.py  test__version.py  test_action_helper.py  test_cache.py  test_command.py  test_environments.py  test_logger.py  test_main.py  test_manifest.py  test_nox_to_tox.py  test_parallel.py  test_popen.py  test_project.py  test_registry.py  test_session.py  test_sessions.py  test_tasks.py  test_toml.py  test_tox_to_nox.py  test_utils.py  test_virtualenv.py  test_workflow.py
tests/resources/: noxfile.py  noxfile_duplicate_sessions.py  noxfile_empty_parametrize.py  noxfile_env_error.py  noxfile_future.py  noxfile_multiple_sessions.py  noxfile_nested.py  noxfile_normalization.py  noxfile_options.py  noxfile_options_pythons.py  noxfile_parametrize.py  noxfile_past.py  noxfile_pythons.py  noxfile_requires.py  noxfile_script_mode.py  noxfile_script_mode_exec.py  noxfile_script_mode_url_req.py  noxfile_spaces.py  noxfile_tags.py  noxfile_unimportable.py  pep721example1.py  pep723example2.py  pep723example3.py
tests/resources/orig_dir/: noxfile.py
tests/resources/sym_dir/: noxfile.py
winreg_output/: 27-32.diff  27-64.diff  35-32.diff  35-64.diff  36-32.diff  36-64.diff  appveyor-26-64.txt  appveyor-27-32.txt  appveyor-27-64.txt  appveyor-33-32.txt  appveyor-33-64.txt  appveyor-35-32.txt  appveyor-35-64.txt  appveyor-36-32.txt  appveyor_winreg.txt  danny-27-32.txt  danny-27-64.txt  danny-35-32.txt  danny-36-32.txt  winreg.txt
