[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "nox"
version = "2024.10.09"
description = "Flexible test automation."
readme = "README.md"
keywords = [
  "automation",
  "testing",
  "tox",
]
license = { text = "Apache-2.0" }
authors = [
  { name = "Alethea Katherine Flowers", email = "me@thea.codes" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "argcomplete>=1.9.4,<4",
  "attrs>=23.1",
  "colorlog>=2.6.1,<7",
  "dependency-groups>=1.1",
  "packaging>=20.9",
  "tomli>=1; python_version<'3.11'",
  "virtualenv>=20.14.1",
]
optional-dependencies.tox_to_nox = [
  "jinja2",
  "tox",
]
optional-dependencies.uv = [
  "uv>=0.1.6",
]
urls.bug-tracker = "https://github.com/wntrblm/nox/issues"
urls.documentation = "https://nox.thea.codes"
urls.homepage = "https://github.com/wntrblm/nox"
urls.repository = "https://github.com/wntrblm/nox"
scripts.nox = "nox.__main__:main"
scripts.tox-to-nox = "nox.tox_to_nox:main"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
]
test = [
  "coverage[toml]>=7.2",
  "pytest>=6",
  "pytest-cov",
]
docs = [
  "myst-parser",
  "sphinx>=3",
  "sphinx-autobuild",
  "sphinx-tabs",
  "witchhazel",
]

[tool.hatch]
metadata.allow-ambiguous-features = true # disable normalization (tox-to-nox) for back-compat

[tool.ruff]
lint.extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EXE",  # flake8-executable
  "FURB", # refurb
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
lint.ignore = [
  "ISC001",  # Conflicts with formatter
  "PLR09",   # Too many X
  "PLR2004", # Magic value used in comparison
]
lint.typing-modules = [ "nox._typing" ]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [ "-ra", "--strict-markers", "--strict-config" ]
xfail_strict = true
filterwarnings = [ "error" ]
log_cli_level = "info"
testpaths = [ "tests" ]

[tool.coverage]
run.branch = true
run.omit = [ "nox/_typing.py" ]
run.relative_files = true
run.source_pkgs = [ "nox" ]
report.exclude_also = [ "def __dir__()", "if TYPE_CHECKING:", "@overload" ]

[tool.mypy]
files = [ "nox/**/*.py", "noxfile.py" ]
python_version = "3.8"
strict = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]

[[tool.mypy.overrides]]
module = [ "argcomplete", "colorlog.*", "py", "tox.*" ]
ignore_missing_imports = true
