[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "nox"
version = "2025.02.09"
description = "Flexible test automation."
readme = "README.md"
keywords = [
  "automation",
  "testing",
  "tox",
]
license = "Apache-2.0"
authors = [
  { name = "Alethea Katherine Flowers", email = "me@thea.codes" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "argcomplete>=1.9.4,<4",
  "attrs>=23.1",
  "colorlog>=2.6.1,<7",
  "dependency-groups>=1.1",
  "packaging>=20.9",
  "tomli>=1; python_version<'3.11'",
  "virtualenv>=20.14.1",
]
optional-dependencies.tox_to_nox = [
  "importlib-resources; python_version<'3.9'",
  "jinja2",
  "tox>=4",
]
optional-dependencies.uv = [
  "uv>=0.1.6",
]
urls.bug-tracker = "https://github.com/wntrblm/nox/issues"
urls.documentation = "https://nox.thea.codes"
urls.homepage = "https://github.com/wntrblm/nox"
urls.repository = "https://github.com/wntrblm/nox"
scripts.nox = "nox.__main__:main"
scripts.tox-to-nox = "nox.tox_to_nox:main"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
]
test = [
  "coverage[toml]>=7.2",
  "pytest>=6",
  "pytest-cov",
]
docs = [
  "myst-parser",
  "sphinx>=3",
  "sphinx-autobuild",
  "sphinx-tabs",
  "witchhazel",
]

[tool.hatch]
metadata.allow-ambiguous-features = true # disable normalization (tox-to-nox) for back-compat

[tool.ruff]
lint.extend-select = [
  # "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "EXE",  # flake8-executable
  "FBT",  # flake8-boolean-trap
  "FLY",  # flynt
  "FURB", # refurb
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "N",    # flake8-naming
  "PERF", # perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "S",   # eval -> literal_eval
  "SIM", # flake8-simplify
  "TC",  # flake8-type-checking
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "YTT", # flake8-2020
]
lint.ignore = [
  "ISC001",  # Conflicts with formatter
  "N802",    # Function name should be lowercase
  "N818",    # Error suffix for errors
  "PLR09",   # Too many X
  "PLR2004", # Magic value used in comparison
  "S101",    # Use of assert detected
  "S603",    # subprocess call - check for execution of untrusted input
]
lint.per-file-ignores."tests/*.py" = [
  "FBT001", # Boolean args okay for fixtures
]
lint.per-file-ignores."tests/resources/**.py" = [ "ARG001", "TRY002" ]
lint.typing-modules = [ "nox._typing" ]
lint.flake8-unused-arguments.ignore-variadic-names = true

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [ "-ra", "--strict-markers", "--strict-config" ]
xfail_strict = true
filterwarnings = [ "error" ]
log_cli_level = "INFO"
testpaths = [ "tests" ]
pythonpath = [ ".github/" ]

[tool.coverage]
run.branch = true
run.relative_files = true
run.source_pkgs = [ "nox" ]
report.exclude_also = [ "def __dir__()", "if TYPE_CHECKING:", "@overload" ]
report.omit = [ "nox/_typing.py" ]

[tool.mypy]
python_version = "3.8"
strict = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
mypy_path = [ ".github" ]

[[tool.mypy.overrides]]
module = [ "tox.*" ]
ignore_missing_imports = true
