[metadata]
name = nox
version = 2021.10.1
description = Flexible test automation.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://nox.thea.codes
author = Alethea Katherine Flowers
author_email = me@thea.codes
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
keywords = testing automation tox
project_urls =
    Documentation = https://nox.thea.codes
    Source Code = https://github.com/theacodes/nox
    Bug Tracker = https://github.com/theacodes/nox/issues

[options]
packages =
    nox
install_requires =
    argcomplete>=1.9.4,<2.0
    colorlog>=2.6.1,<7.0.0
    packaging>=20.9
    py>=1.4.0,<2.0.0
    typing_extensions>=3.7.4;python_version < '3.8'
    virtualenv>=14.0.0
    importlib_metadata;python_version < '3.8'
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    nox = nox.__main__:main
    tox-to-nox = nox.tox_to_nox:main [tox_to_nox]

[options.extras_require]
tox_to_nox =
    jinja2
    tox

[options.package_data]
nox = py.typed

[flake8]
# Ignore black styles.
ignore = E501, W503, E203
# Imports
import-order-style = google
application-import-names = nox,tests
